--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,17 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,6 +56,16 @@
     </dependencies>
 
     <build>
+<!--        &lt;!&ndash; 这个元素描述了项目相关的所有资源路径列表，例如和项目相关的属性文件，这些资源被包含在最终的打包文件里。 &ndash;&gt;-->
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                &lt;!&ndash; 描述存放资源的目录，该路径相对POM路径 &ndash;&gt;-->
+<!--                <directory>src/main/resources/mapper</directory>-->
+<!--                <includes>-->
+<!--                    <include>*.xml</include>-->
+<!--                </includes>-->
+<!--            </resource>-->
+<!--        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
